--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -284,12 +284,12 @@
             <div class="round quarterfinals current">
               <div class="round-details">Quarterfinals<br/></div>
               <ul class="matchup">
-                  <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                  <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);">Group-A 1st<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);">Group-B 2nd<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                  <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                  <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);">Group-A 2nd<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);">Group-B 1st<span class="score">&nbsp;</span></a></li>
               </ul>
            </div>
           </div>
@@ -298,23 +298,23 @@
             <div class="semis-l current">
                <div class="round-details">Semifinals 1 <br/></div>
                <ul class ="matchup championship">
-                   <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                   <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                </ul>
             </div>
             <div class="final current">
                <i class="fa fa-trophy"></i>
                <div class="round-details">Finals <br/></div>
                <ul class ="matchup championship">
-                   <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                   <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                </ul>
             </div>
             <div class="semis-r current">
                <div class="round-details">Semifinals 2 <br/></div>
                <ul class ="matchup championship">
-                   <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                   <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                </ul>
             </div>
           </div>
@@ -323,12 +323,12 @@
             <div class="round quarterfinals current">
               <div class="round-details">Quarterfinals<br/></div>
               <ul class="matchup">
-                  <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                  <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);">Group C 1st<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);">Group D 2nd<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                  <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                  <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);">Group D 1st<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);">Group C 2nd<span class="score">&nbsp;</span></a></li>
               </ul>
            </div>  
           </div>
