--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -687,28 +687,28 @@
                 <td>Group</td>
                 <td>A</td>
                 <td><a href="https://redd.it/lbo00v" target="_blank"><u>ITA vs KOR</u></a></td>
-                <td></td>
+                <td>ITA (2.5-1.5)</td>
               </tr>
               <tr>        
                 <td>Feb 03</td>
                 <td>Group</td>
                 <td>B</td>
                 <td><a href="https://redd.it/lbo00v" target="_blank"><u>FRA vs CHN</u></a></td>
-                <td></td>
+                <td>FRA (4-0)</td>
               </tr>
 
               <tr>        
                 <td>Feb 07</td>
                 <td>Group</td>
                 <td>C</td>
-                <td>IND vs HUN</td>
+                <td><a href="https://redd.it/lf53dd" target="_blank"><u>IND vs HUN</u></a></td>
                 <td></td>
               </tr>
               <tr>        
                 <td>Feb 07</td>
                 <td>Group</td>
                 <td>D</td>
-                <td>ISR vs JAP</td>
+                <td><a href="https://redd.it/lf53dd" target="_blank"><u>ISR vs JAP</u></a></td>
                 <td></td>
               </tr>
 
