--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -702,28 +702,28 @@
                 <td>Group</td>
                 <td>C</td>
                 <td><a href="https://redd.it/lf53dd" target="_blank"><u>IND vs HUN</u></a></td>
-                <td></td>
+                <td>IND (3-1)</td>
               </tr>
               <tr>        
                 <td>Feb 07</td>
                 <td>Group</td>
                 <td>D</td>
                 <td><a href="https://redd.it/lf53dd" target="_blank"><u>ISR vs JAP</u></a></td>
-                <td></td>
+                <td>ISR (4-0)</td>
               </tr>
 
               <tr>        
                 <td>Feb 11</td>
                 <td>Group</td>
                 <td>A</td>
-                <td>USA vs BRA</td>
+                <td><a href="https://redd.it/lhkpup" target="_blank"><u>USA vs BRA</u></a></td>
                 <td></td>
               </tr>
               <tr>        
                 <td>Feb 11</td>
                 <td>Group</td>
                 <td>B</td>
-                <td>ENG vs MEX</td>
+                <td><a href="https://redd.it/lhkpup" target="_blank"><u>ENG vs MEX</u></a></td>
                 <td></td>
               </tr>
 
