--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -731,14 +731,14 @@
                 <td>Feb 15</td>
                 <td>Group</td>
                 <td>C</td>
-                <td>AUS vs SPA</td>
+                <td><a href="https://redd.it/lkcncc" target="_blank"><u>AUS vs SPA</u></a></td>
                 <td></td>
               </tr>
               <tr>        
                 <td>Feb 15</td>
                 <td>Group</td>
                 <td>D</td>
-                <td>CAN vs SWE</td>
+                <td><a href="https://redd.it/lkcncc" target="_blank"><u>CAN vs SWE</u></a></td>
                 <td></td>
               </tr>
             </tbody>
