--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -179,21 +179,21 @@
             <tbody>
               <tr>
                 <td>AUS</td>
-                <td>2</td>
-                <td>2</td>
+                <td>3</td>
+                <td>3</td>
                 <td>0</td>
                 <td>0</td>
-                <td>6</td>
-                <td>1.26</td>
+                <td>9</td>
+                <td>1.84</td>
               </tr>
               <tr>
                 <td>SPA</td>
-                <td>2</td>
+                <td>3</td>
                 <td>2</td>
                 <td>0</td>
                 <td>0</td>
                 <td>6</td>
-                <td>1.23</td>
+                <td>1.65</td>
               </tr>
               <tr>
                 <td>IND</td>
@@ -232,6 +232,15 @@
             </thead>
             <tbody>
               <tr>
+                <td>CAN</td>
+                <td>3</td>
+                <td>2</td>
+                <td>1</td>
+                <td>0</td>
+                <td>7</td>
+                <td>1.94</td>
+              </tr>  
+              <tr>
                 <td>ISR</td>
                 <td>3</td>
                 <td>2</td>
@@ -239,24 +248,15 @@
                 <td>0</td>
                 <td>7</td>
                 <td>1.93</td>
-              </tr>
-              <tr>
-                <td>CAN</td>
-                <td>2</td>
-                <td>1</td>
-                <td>1</td>
-                <td>0</td>
-                <td>4</td>
-                <td>1.22</td>
-              </tr>              
+              </tr>            
               <tr>
                 <td>SWE</td>
-                <td>2</td>
+                <td>3</td>
                 <td>1</td>
                 <td>0</td>
-                <td>1</td>
+                <td>2</td>
                 <td>3</td>
-                <td>0.89</td>
+                <td>1.17</td>
               </tr>      
               <tr>
                 <td>JAP</td>
@@ -284,12 +284,12 @@
             <div class="round quarterfinals current">
               <div class="round-details">Quarterfinals<br/></div>
               <ul class="matchup">
-                  <li class="team team-top name-details"><a href="javascript:void(0);">Group-A 1st<span class="score">&nbsp;</span></a></li>
-                  <li class="team team-top name-details"><a href="javascript:void(0);">Group-B 2nd<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);">USA<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);">MEX<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                  <li class="team team-top name-details"><a href="javascript:void(0);">Group-A 2nd<span class="score">&nbsp;</span></a></li>
-                  <li class="team team-top name-details"><a href="javascript:void(0);">Group-B 1st<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);">ITA<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);">ENG<span class="score">&nbsp;</span></a></li>
               </ul>
            </div>
           </div>
@@ -323,12 +323,12 @@
             <div class="round quarterfinals current">
               <div class="round-details">Quarterfinals<br/></div>
               <ul class="matchup">
-                  <li class="team team-top name-details"><a href="javascript:void(0);">Group C 1st<span class="score">&nbsp;</span></a></li>
-                  <li class="team team-top name-details"><a href="javascript:void(0);">Group D 2nd<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);">AUS<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);">ISR<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
-                  <li class="team team-top name-details"><a href="javascript:void(0);">Group D 1st<span class="score">&nbsp;</span></a></li>
-                  <li class="team team-top name-details"><a href="javascript:void(0);">Group C 2nd<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);">CAN<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="javascript:void(0);">SPA<span class="score">&nbsp;</span></a></li>
               </ul>
            </div>  
           </div>
