--- a/tournaments/wc2021/info.html
+++ b/tournaments/wc2021/info.html
@@ -717,14 +717,14 @@
                 <td>Group</td>
                 <td>A</td>
                 <td><a href="https://redd.it/lhkpup" target="_blank"><u>USA vs BRA</u></a></td>
-                <td></td>
+                <td>USA (4-0)</td>
               </tr>
               <tr>        
                 <td>Feb 11</td>
                 <td>Group</td>
                 <td>B</td>
                 <td><a href="https://redd.it/lhkpup" target="_blank"><u>ENG vs MEX</u></a></td>
-                <td></td>
+                <td>ENG (4-0)</td>
               </tr>
 
               <tr>        
@@ -732,14 +732,14 @@
                 <td>Group</td>
                 <td>C</td>
                 <td><a href="https://redd.it/lkcncc" target="_blank"><u>AUS vs SPA</u></a></td>
-                <td></td>
+                <td>AUS (4-0)</td>
               </tr>
               <tr>        
                 <td>Feb 15</td>
                 <td>Group</td>
                 <td>D</td>
                 <td><a href="https://redd.it/lkcncc" target="_blank"><u>CAN vs SWE</u></a></td>
-                <td></td>
+                <td>CAN (4-0)</td>
               </tr>
             </tbody>
           </table>
