--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -284,8 +284,8 @@
             <div class="round quarterfinals current">
               <div class="round-details">Quarterfinals<br/></div>
               <ul class="matchup">
-                  <li class="team team-top name-details"><a href="javascript:void(0);">USA<span class="score">&nbsp;</span></a></li>
-                  <li class="team team-top name-details"><a href="javascript:void(0);">MEX<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="https://redd.it/lrcyem" target="_blank">USA<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="https://redd.it/lrcyem" target="_blank">MEX<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
                   <li class="team team-top name-details"><a href="javascript:void(0);">ITA<span class="score">&nbsp;</span></a></li>
