--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -284,8 +284,8 @@
             <div class="round quarterfinals current">
               <div class="round-details">Quarterfinals<br/></div>
               <ul class="matchup">
-                  <li class="team team-top name-details"><a href="https://redd.it/lrcyem" target="_blank">USA<span class="score">&nbsp;</span></a></li>
-                  <li class="team team-top name-details"><a href="https://redd.it/lrcyem" target="_blank">MEX<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="https://redd.it/lrcyem" target="_blank">USA<span class="score">3</span></a></li>
+                  <li class="team team-top name-details"><a href="https://redd.it/lrcyem" target="_blank">MEX<span class="score">1</span></a></li>
               </ul>
               <ul class="matchup">
                   <li class="team team-top name-details"><a href="javascript:void(0);">ITA<span class="score">&nbsp;</span></a></li>
@@ -298,7 +298,7 @@
             <div class="semis-l current">
                <div class="round-details">Semifinals 1 <br/></div>
                <ul class ="matchup championship">
-                   <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                </ul>
             </div>
@@ -323,8 +323,8 @@
             <div class="round quarterfinals current">
               <div class="round-details">Quarterfinals<br/></div>
               <ul class="matchup">
-                  <li class="team team-top name-details"><a href="javascript:void(0);">AUS<span class="score">&nbsp;</span></a></li>
-                  <li class="team team-top name-details"><a href="javascript:void(0);">ISR<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="https://redd.it/ltomwl" target="_blank">AUS<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="https://redd.it/ltomwl" target="_blank">ISR<span class="score">&nbsp;</span></a></li>
               </ul>
               <ul class="matchup">
                   <li class="team team-top name-details"><a href="javascript:void(0);">CAN<span class="score">&nbsp;</span></a></li>
