--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -298,7 +298,7 @@
             <div class="semis-l current">
                <div class="round-details">Semifinals 1 <br/></div>
                <ul class ="matchup championship">
-                   <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="javascript:void(0);">USA<span class="score">&nbsp;</span></a></li>
                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                </ul>
             </div>
