--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -288,8 +288,8 @@
                   <li class="team team-top name-details"><a href="https://redd.it/lrcyem" target="_blank">MEX<span class="score">1</span></a></li>
               </ul>
               <ul class="matchup">
-                  <li class="team team-top name-details"><a href="https://redd.it/lw3qpq" target="_blank">ITA<span class="score">&nbsp;</span></a></li>
-                  <li class="team team-top name-details"><a href="https://redd.it/lw3qpq" target="_blank">ENG<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="https://redd.it/lw3qpq" target="_blank">ITA<span class="score">0</span></a></li>
+                  <li class="team team-top name-details"><a href="https://redd.it/lw3qpq" target="_blank">ENG<span class="score">4</span></a></li>
               </ul>
            </div>
           </div>
@@ -314,7 +314,7 @@
                <div class="round-details">Semifinals 2 <br/></div>
                <ul class ="matchup championship">
                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
-                   <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="javascript:void(0);">ENG<span class="score">&nbsp;</span></a></li>
                </ul>
             </div>
           </div>
@@ -327,8 +327,8 @@
                   <li class="team team-top name-details"><a href="https://redd.it/ltomwl" target="_blank">ISR<span class="score">1</span></a></li>
               </ul>
               <ul class="matchup">
-                  <li class="team team-top name-details"><a href="javascript:void(0);">CAN<span class="score">&nbsp;</span></a></li>
-                  <li class="team team-top name-details"><a href="javascript:void(0);">SPA<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="https://redd.it/lzqfw3" target="_blank">CAN<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="https://redd.it/lzqfw3" target="_blank">SPA<span class="score">&nbsp;</span></a></li>
               </ul>
            </div>  
           </div>
