--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -298,8 +298,8 @@
             <div class="semis-l current">
                <div class="round-details">Semifinals 1 <br/></div>
                <ul class ="matchup championship">
-                   <li class="team team-top name-details"><a href="javascript:void(0);">USA<span class="score">&nbsp;</span></a></li>
-                   <li class="team team-top name-details"><a href="javascript:void(0);">AUS<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="https://redd.it/m4ur71" target="_blank">USA<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="https://redd.it/m4ur71" target="_blank">AUS<span class="score">&nbsp;</span></a></li>
                </ul>
             </div>
             <div class="final current">
@@ -313,7 +313,7 @@
             <div class="semis-r current">
                <div class="round-details">Semifinals 2 <br/></div>
                <ul class ="matchup championship">
-                   <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="javascript:void(0);">CAN<span class="score">&nbsp;</span></a></li>
                    <li class="team team-top name-details"><a href="javascript:void(0);">ENG<span class="score">&nbsp;</span></a></li>
                </ul>
             </div>
@@ -327,8 +327,8 @@
                   <li class="team team-top name-details"><a href="https://redd.it/ltomwl" target="_blank">ISR<span class="score">1</span></a></li>
               </ul>
               <ul class="matchup">
-                  <li class="team team-top name-details"><a href="https://redd.it/lzqfw3" target="_blank">CAN<span class="score">&nbsp;</span></a></li>
-                  <li class="team team-top name-details"><a href="https://redd.it/lzqfw3" target="_blank">SPA<span class="score">&nbsp;</span></a></li>
+                  <li class="team team-top name-details"><a href="https://redd.it/lzqfw3" target="_blank">CAN<span class="score">3</span></a></li>
+                  <li class="team team-top name-details"><a href="https://redd.it/lzqfw3" target="_blank">SPA<span class="score">1</span></a></li>
               </ul>
            </div>  
           </div>
