--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -299,7 +299,7 @@
                <div class="round-details">Semifinals 1 <br/></div>
                <ul class ="matchup championship">
                    <li class="team team-top name-details"><a href="https://redd.it/m4ur71" target="_blank">USA<span class="score">4</span></a></li>
-                   <li class="team team-top name-details"><a href="https://redd.it/m4ur71" target="_blank">AUS<span class="score">0</span></a></li>
+                   <li class="team team-top name-details"><a href="https://redd.it/m4ur71" target="_blank">AUS<span class="score">&nbsp;</span></a></li>
                </ul>
             </div>
             <div class="final current">
@@ -307,14 +307,14 @@
                <div class="round-details">Finals <br/></div>
                <ul class ="matchup championship">
                    <li class="team team-top name-details"><a href="javascript:void(0);">USA<span class="score">&nbsp;</span></a></li>
-                   <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="javascript:void(0);">ENG<span class="score">&nbsp;</span></a></li>
                </ul>
             </div>
             <div class="semis-r current">
                <div class="round-details">Semifinals 2 <br/></div>
                <ul class ="matchup championship">
-                   <li class="team team-top name-details"><a href="https://redd.it/m9vxba" target="_blank">CAN<span class="score">&nbsp;</span></a></li>
-                   <li class="team team-top name-details"><a href="https://redd.it/m9vxba" target="_blank">ENG<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="https://redd.it/m9vxba" target="_blank">CAN<span class="score">1</span></a></li>
+                   <li class="team team-top name-details"><a href="https://redd.it/m9vxba" target="_blank">ENG<span class="score">3</span></a></li>
                </ul>
             </div>
           </div>
