--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -299,7 +299,7 @@
                <div class="round-details">Semifinals 1 <br/></div>
                <ul class ="matchup championship">
                    <li class="team team-top name-details"><a href="https://redd.it/m4ur71" target="_blank">USA<span class="score">4</span></a></li>
-                   <li class="team team-top name-details"><a href="https://redd.it/m4ur71" target="_blank">AUS<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="https://redd.it/m4ur71" target="_blank">AUS<span class="score">0</span></a></li>
                </ul>
             </div>
             <div class="final current">
