--- a/tournaments/wc2021.html
+++ b/tournaments/wc2021.html
@@ -40,6 +40,7 @@
     <br> 
     
     <div class="container">
+      <div><h2 class="final-winner">CHAMPIONS: USA </h2></div>
       <div><p class="info">Celeb World Cup 2021 hosted by <a class="info-link" href="https://reddit.com/r/celebbattles" target="_blank">r/CelebBattles</a> will see celebs from 16 countries compete against each other to decide which country has the hottest celebs. Each round will last 4 days, members of the subreddit will vote for the hottest celeb in each battle and decide who moves on, who gets eliminated and who ends up winning the whole thing.</p></div>
 
       <div class="info">TOURNAMENT INFO & SCHEDULE: <a class="info-link" href="https://celebbattles.github.io/tournaments/wc2021/info" target="_blank">/wc2021/info</a></div>
@@ -306,8 +307,8 @@
                <i class="fa fa-trophy"></i>
                <div class="round-details">Finals <br/></div>
                <ul class ="matchup championship">
-                   <li class="team team-top name-details"><a href="javascript:void(0);">USA<span class="score">&nbsp;</span></a></li>
-                   <li class="team team-top name-details"><a href="javascript:void(0);">ENG<span class="score">&nbsp;</span></a></li>
+                   <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/mdnmc8/world_cup_2021_finals_format/">USA<span class="score">3.5</span></a></li>
+                   <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/mdnmc8/world_cup_2021_finals_format/">ENG<span class="score">0.5</span></a></li>
                </ul>
             </div>
             <div class="semis-r current">
