--- a/tournaments/underrated.html
+++ b/tournaments/underrated.html
@@ -113,7 +113,7 @@
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Yanet Garcia<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Milana Vayntrub<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Helga Lovekaty<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Alison Brie<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <p class="group-details">Group D</p>
                  <ul class="matchup">
