--- a/tournaments/underrated.html
+++ b/tournaments/underrated.html
@@ -54,24 +54,24 @@
                 <div class="round-details">Round 1<br/></div>
                 <p class="group-details">Group A</p>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Amy Adams<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Naomi Scott<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p17b/hottest_underrated_celeb_group_a_naomi_scott_vs/" target="_blank">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p17b/hottest_underrated_celeb_group_a_naomi_scott_vs/" target="_blank">Amy Adams<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p17b/hottest_underrated_celeb_group_a_naomi_scott_vs/" target="_blank">Naomi Scott<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Jessica Biel<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Ariana Grande<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Danielle Sharp<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p0vd/hottest_underrated_celeb_group_a_danielle_sharp/" target="_blank">Jessica Biel<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p0vd/hottest_underrated_celeb_group_a_danielle_sharp/" target="_blank">Ariana Grande<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p0vd/hottest_underrated_celeb_group_a_danielle_sharp/" target="_blank">Danielle Sharp<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Anya Taylor-Joy<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Miranda Kerr<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Lucy Pinder<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p12h/hottest_underrated_celeb_group_a_miranda_kerr_vs/" target="_blank">Anya Taylor-Joy<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p12h/hottest_underrated_celeb_group_a_miranda_kerr_vs/" target="_blank">Miranda Kerr<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p12h/hottest_underrated_celeb_group_a_miranda_kerr_vs/" target="_blank">Lucy Pinder<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Kate Mara<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Brooklyn Decker<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Audrey Hepburn<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2oxah/hottest_underrated_celeb_group_a_brooklyn_decker/" target="_blank">Kate Mara<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2oxah/hottest_underrated_celeb_group_a_brooklyn_decker/" target="_blank">Brooklyn Decker<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2oxah/hottest_underrated_celeb_group_a_brooklyn_decker/" target="_blank">Audrey Hepburn<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <p class="group-details">Group B</p>
                 <ul class="matchup">
