--- a/tournaments/underrated.html
+++ b/tournaments/underrated.html
@@ -54,45 +54,45 @@
                 <div class="round-details">Round 1<br/></div>
                 <p class="group-details">Group A</p>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p17b/hottest_underrated_celeb_group_a_naomi_scott_vs/" target="_blank">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p17b/hottest_underrated_celeb_group_a_naomi_scott_vs/" target="_blank">Amy Adams<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p17b/hottest_underrated_celeb_group_a_naomi_scott_vs/" target="_blank">Naomi Scott<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p17b/" target="_blank">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p17b/" target="_blank">Amy Adams<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p17b/" target="_blank">Naomi Scott<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p0vd/hottest_underrated_celeb_group_a_danielle_sharp/" target="_blank">Jessica Biel<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p0vd/hottest_underrated_celeb_group_a_danielle_sharp/" target="_blank">Ariana Grande<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p0vd/hottest_underrated_celeb_group_a_danielle_sharp/" target="_blank">Danielle Sharp<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p0vd/" target="_blank">Jessica Biel<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p0vd/" target="_blank">Ariana Grande<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p0vd/" target="_blank">Danielle Sharp<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p12h/hottest_underrated_celeb_group_a_miranda_kerr_vs/" target="_blank">Anya Taylor-Joy<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p12h/hottest_underrated_celeb_group_a_miranda_kerr_vs/" target="_blank">Miranda Kerr<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p12h/hottest_underrated_celeb_group_a_miranda_kerr_vs/" target="_blank">Lucy Pinder<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p12h/" target="_blank">Anya Taylor-Joy<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p12h/" target="_blank">Miranda Kerr<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2p12h/" target="_blank">Lucy Pinder<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2oxah/hottest_underrated_celeb_group_a_brooklyn_decker/" target="_blank">Kate Mara<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2oxah/hottest_underrated_celeb_group_a_brooklyn_decker/" target="_blank">Brooklyn Decker<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2oxah/hottest_underrated_celeb_group_a_brooklyn_decker/" target="_blank">Audrey Hepburn<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2oxah/" target="_blank">Kate Mara<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2oxah/" target="_blank">Brooklyn Decker<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o2oxah/" target="_blank">Audrey Hepburn<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <p class="group-details">Group B</p>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Allison Stokke<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Julia Liepa<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b5kx" target="_blank">Allison Stokke<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b5kx" target="_blank">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b5kx" target="_blank">Julia Liepa<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Olivia Munn<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Megan Fox<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Dove Cameron<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b65a" target="_blank">Olivia Munn<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b65a" target="_blank">Megan Fox<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b65a" target="_blank">Dove Cameron<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Michelle Trachtenberg<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Emily Blunt<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Jennifer Aniston<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b5wx" target="_blank">Michelle Trachtenberg<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b5wx" target="_blank">Emily Blunt<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b5wx" target="_blank">Jennifer Aniston<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Caylee Cowan<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Isla Fisher<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Bryce Dallas Howard<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b61a" target="_blank">Caylee Cowan<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b61a" target="_blank">Isla Fisher<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b61a" target="_blank">Bryce Dallas Howard<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <p class="group-details">Group C</p>
                 <ul class="matchup">
@@ -141,12 +141,12 @@
              <div class="round round-two current">
                 <div class="round-details">Round 2<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Ariana Grande<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Anya Taylor-Joy<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Kate Mara<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
